--- a/members/index.html
+++ b/members/index.html
@@ -1,3 +1,12 @@
+---
+title: members
+permalink: /members/
+layout: page
+excerpt: All post.
+comments: false
+---
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
