--- a/members/index.html
+++ b/members/index.html
@@ -1,6 +1,10 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
+{% include header.html %}
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
