--- a/members/index.html
+++ b/members/index.html
@@ -1,222 +1,76 @@
+---
+layout: compress
+title: Team
+---
 
 <!DOCTYPE html>
-<html lang="en">
-
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
 {% include header.html %}
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Team</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #1d1d20;/*url('./members-background.png') no-repeat center center fixed;*/
-      background-size: cover;
-      margin: 2rem;
-      text-align: center;
-      color: #eee;
-    }
-
-    h1 {
-      margin-bottom: 2rem;
-      color: #ccc;
-    }
-
-    .team {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      margin-bottom: 3rem; /* space between teams */
-    }
-
-    .member {
-      text-align: center;
-      max-width: 160px;
-      padding: 1.5rem 1rem;
-      /*background: rgba(59, 57, 57, 0.429); /* darker semi-transparent */
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-
-    .member img.avatar {
-      width: 80px;
-      height: 80px;
-      border-radius: 40%;
-      object-fit: cover;
-      margin-bottom: 0.5rem;
-    }
-
-    .player {
-      font-weight: bold;
-      font-size: 1rem;
-      margin-bottom: 0.2rem;
-    }
-
-    .skills {
-      font-size: 0.85rem;
-      color: #bbb;
-      font-weight: bold;
-      margin-bottom: 0.3rem;
-    }
-
-    .bio {
-      font-size: 0.75rem;
-      color: #aaa;
-      margin-bottom: 0.5rem;
-    }
-
-    .buttons a img {
-      width: 20px;
-      height: 20px;
-      margin: 0 4px;
-      vertical-align: middle;
-      filter: brightness(0.85);
-    }
-
-    @media (max-width: 600px) {
-      .team {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .member {
-        max-width: 90%;
-      }
-    }
-  </style>
+  <title>{{ page.title }}</title>
 </head>
-<body>
 
-  <div class="team">
-    <div class="member">
-      <img class="avatar" src="4f3rg4n-avatar.png" alt="profile" />
-      <div class="player">4f3rg4n</div>
-      <div class="skills">pwn | RE</div>
-      <div class="bio">web? hell nah</div>
-      <div class="buttons">
-        <a href="https://twitter.com/" target="_blank">
-          <img src="twitter.svg" alt="Twitter">
-        </a>
-        <a href="https://github.com/" target="_blank">
-          <img src="github.svg" alt="GitHub">
-        </a>
-        <a href="https://ctftime.org/" target="_blank">
-          <img src="website.svg" alt="CTFtime">
-        </a>
-      </div>
-    </div>
+<body data-theme="{{ site.mode }}" class="notransition">
 
-    <div class="member">
-      <img class="avatar" src="ERROR-404-avatar.png" alt="profile" />
-      <div class="player">ERROR-404</div>
-      <div class="skills">web</div>
-      <div class="bio">bio</div>
-      <div class="buttons">
-        <a href="https://twitter.com/" target="_blank">
-          <img src="twitter.svg" alt="Twitter">
-        </a>
-        <a href="https://github.com/" target="_blank">
-          <img src="github.svg" alt="GitHub">
-        </a>
-        <a href="https://ctftime.org/" target="_blank">
-          <img src="website.svg" alt="CTFtime">
-        </a>
-      </div>
-    </div>
-    <div class="member">
-      <img class="avatar" src="stardust-avatar.png" alt="profile" />
-      <div class="player">stardust</div>
-      <div class="skills">web</div>
-      <div class="bio">bio</div>
-      <div class="buttons">
-        <a href="https://twitter.com/" target="_blank">
-          <img src="twitter.svg" alt="Twitter">
-        </a>
-        <a href="https://github.com/" target="_blank">
-          <img src="github.svg" alt="GitHub">
-        </a>
-        <a href="https://ctftime.org/" target="_blank">
-          <img src="website.svg" alt="CTFtime">
-        </a>
-      </div>
-    </div>
-    <div class="member">
-        <img class="avatar" src="oureveryday-avatar.png" alt="profile" />
-        <div class="player">oureveryday</div>
-        <div class="skills">RE</div>
-        <div class="bio">bio</div>
-        <div class="buttons">
-          <a href="https://twitter.com/" target="_blank">
-            <img src="twitter.svg" alt="Twitter">
-          </a>
-          <a href="https://github.com/" target="_blank">
-            <img src="github.svg" alt="GitHub">
-          </a>
-          <a href="https://ctftime.org/" target="_blank">
-            <img src="website.svg" alt="CTFtime">
-          </a>
+  <script>
+    const body = document.body;
+    const data = body.getAttribute("data-theme");
+
+    const initTheme = (state) => {
+      if (state === "dark") {
+        body.setAttribute("data-theme", "dark");
+      } else if (state === "light") {
+        body.removeAttribute("data-theme");
+      } else {
+        localStorage.setItem("theme", data);
+      }
+    };
+
+    initTheme(localStorage.getItem("theme"));
+
+    setTimeout(() => body.classList.remove("notransition"), 75);
+  </script>
+
+  {% include navbar.html %}
+
+  <div class="wrapper">
+    <main class="page-content" aria-label="Content">
+      <article itemscope itemtype="https://schema.org/Article">
+
+        <header class="header">
+          <h1 class="header-title" itemprop="headline">{{ page.title }}</h1>
+        </header>
+
+        <div class="page-content" itemprop="articleBody">
+          <!-- Team Section -->
+          <div class="team">
+            <!-- Repeat member blocks as needed -->
+            <!-- example block -->
+            <div class="member">
+              <img class="avatar" src="4f3rg4n-avatar.png" alt="profile" />
+              <div class="player">4f3rg4n</div>
+              <div class="skills">pwn | RE</div>
+              <div class="bio">web? hell nah</div>
+              <div class="buttons">
+                <a href="https://twitter.com/" target="_blank"><img src="twitter.svg" alt="Twitter"></a>
+                <a href="https://github.com/" target="_blank"><img src="github.svg" alt="GitHub"></a>
+                <a href="https://ctftime.org/" target="_blank"><img src="website.svg" alt="CTFtime"></a>
+              </div>
+            </div>
+
+            <!-- Add more member blocks here, all inside the same or separate .team divs as needed -->
+          </div>
         </div>
-      </div>
-      <div class="member">
-        <img class="avatar" src="Jeffrey-avatar.png" alt="profile" />
-        <div class="player">Jeffrey</div>
-        <div class="skills">web</div>
-        <div class="bio">bio</div>
-        <div class="buttons">
-          <a href="https://twitter.com/" target="_blank">
-            <img src="twitter.svg" alt="Twitter">
-          </a>
-          <a href="https://github.com/" target="_blank">
-            <img src="github.svg" alt="GitHub">
-          </a>
-          <a href="https://ctftime.org/" target="_blank">
-            <img src="website.svg" alt="CTFtime">
-          </a>
-        </div>
-      </div>
 
+      </article>
+    </main>
+
+    {% include footer.html %}
   </div>
-
-  <!-- section 2 -->
-  <div class="team">
-    <div class="member">
-      <img class="avatar" src="EFAULT-avatar.png" alt="profile" />
-      <div class="player">EFAULT</div>
-      <div class="skills">RE</div>
-      <div class="bio">bio</div>
-      <div class="buttons">
-        <a href="https://twitter.com/" target="_blank">
-          <img src="twitter.svg" alt="Twitter">
-        </a>
-        <a href="https://github.com/" target="_blank">
-          <img src="github.svg" alt="GitHub">
-        </a>
-        <a href="https://ctftime.org/" target="_blank">
-          <img src="website.svg" alt="CTFtime">
-        </a>
-      </div>
-    </div>
-    <div class="member">
-        <img class="avatar" src="r@-avatar.png" alt="profile" />
-        <div class="player">r@?</div>
-        <div class="skills">web</div>
-        <div class="bio">bio</div>
-        <div class="buttons">
-        <a href="https://twitter.com/" target="_blank">
-            <img src="twitter.svg" alt="Twitter">
-        </a>
-        <a href="https://github.com/" target="_blank">
-            <img src="github.svg" alt="GitHub">
-        </a>
-        <a href="https://ctftime.org/" target="_blank">
-            <img src="website.svg" alt="CTFtime">
-        </a>
-        </div>
-    </div>
-</div>
-
 </body>
+
 </html>
