--- a/members/index.html
+++ b/members/index.html
@@ -197,11 +197,21 @@ layout: compress
                   <a href="https://ctftime.org/" target="_blank"><img src="website.svg" alt="CTFtime"></a>
                 </div>
               </div>
-            </div>
-            
 
+              <div class="member">
+                <img class="avatar" src="ohaal-avatar.png" alt="profile" />
+                <div class="player">ohaal</div>
+                <div class="skills">web | forensics</div>
+                <div class="bio">bio</div>
+                <div class="buttons">
+                  <a href="https://twitter.com/" target="_blank"><img src="twitter.svg" alt="Twitter"></a>
+                  <a href="https://github.com/" target="_blank"><img src="github.svg" alt="GitHub"></a>
+                  <a href="https://ctftime.org/" target="_blank"><img src="website.svg" alt="CTFtime"></a>
+                </div>
+              </div>
             <!-- Add more member blocks here, all inside the same or separate .team divs as needed -->
 
+            </div>
         </div>
 
       </article>
