added new team group

--- a/members/index.html
+++ b/members/index.html
@@ -173,7 +173,8 @@ layout: compress
                   <a href="https://ctftime.org/" target="_blank"><img src="website.svg" alt="CTFtime"></a>
                 </div>
               </div>
-            
+            </div>
+            <div class="team">
               <div class="member">
                 <img class="avatar" src="EFAULT-avatar.png" alt="profile" />
                 <div class="player">EFAULT</div>
