--- a/members/index.html
+++ b/members/index.html
@@ -165,7 +165,7 @@ layout: compress
               <div class="member">
                 <img class="avatar" src="Jeffrey-avatar.png" alt="profile" />
                 <div class="player">Jeffrey</div>
-                <div class="skills">web</div>
+                <div class="skills">web | forensics</div>
                 <div class="bio">bio</div>
                 <div class="buttons">
                   <a href="https://twitter.com/" target="_blank"><img src="twitter.svg" alt="Twitter"></a>
