--- a/members/index.html
+++ b/members/index.html
@@ -26,7 +26,7 @@ layout: compress
     text-align: center;
     max-width: 160px;
     padding: 1.5rem 1rem;
-    /*background: rgba(59, 57, 57, 0.429); /* darker semi-transparent */
+    background: rgba(59, 57, 57, 0.429); /* darker semi-transparent */
     border-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
@@ -59,9 +59,9 @@ layout: compress
   }
 
   .buttons a img {
-    width: 20px;
-    height: 20px;
-    margin: 0 4px;
+    width: 25px;
+    height: 25px;
+    margin: 0 10px;
     vertical-align: middle;
     filter: brightness(0.85);
   }
