update afergan details

--- a/members/index.html
+++ b/members/index.html
@@ -116,8 +116,8 @@ layout: compress
               <div class="bio">web? hell nah</div>
               <div class="buttons">
                 <a href="https://twitter.com/" ><img src="/assets/img/twitter.svg" alt="Twitter"></a>
-                <a href="https://github.com/" ><img src="/assets/img/github.svg" alt="GitHub"></a>
-                <a href="https://ctftime.org/" ><img src="/assets/img/website.svg" alt="CTFtime"></a>
+                <a href="https://github.com/4f3rg4n" ><img src="/assets/img/github.svg" alt="GitHub"></a>
+                <a href="https://4f3rg4n.github.io" ><img src="/assets/img/website.svg" alt="CTFtime"></a>
               </div>
             </div>
           
