--- a/members/index.html
+++ b/members/index.html
@@ -205,6 +205,18 @@ layout: compress
                 <a href="https://ctftime.org/" ><img src="/assets/img/website.svg" alt="CTFtime"></a>
               </div>
             </div>
+
+            <div class="member">
+              <img class="avatar" src="/assets/img/digital-forensic-avatar.png" alt="profile" />
+              <div class="player">Digital Forensic</div>
+              <div class="skills">web | misc | forensics</div>
+              <div class="bio">bio</div>
+              <div class="buttons">
+                <a href="https://twitter.com/" ><img src="/assets/img/twitter.svg" alt="Twitter"></a>
+                <a href="https://github.com/" ><img src="/assets/img/github.svg" alt="GitHub"></a>
+                <a href="https://ctftime.org/" ><img src="/assets/img/website.svg" alt="CTFtime"></a>
+              </div>
+            </div>
           <!-- Add more member blocks here, all inside the same or separate .team divs as needed -->
 
           </div>
