--- a/members/index.html
+++ b/members/index.html
@@ -209,7 +209,7 @@ layout: compress
             <div class="member">
               <img class="avatar" src="/assets/img/digital-forensic-avatar.png" alt="profile" />
               <div class="player">Digital Forensic</div>
-              <div class="skills">web | misc | forensics</div>
+              <div class="skills">web | misc</div>
               <div class="bio">bio</div>
               <div class="buttons">
                 <a href="https://twitter.com/" ><img src="/assets/img/twitter.svg" alt="Twitter"></a>
