--- a/members/index.html
+++ b/members/index.html
@@ -233,7 +233,7 @@ layout: compress
             <div class="member">
               <img class="avatar" src="/assets/img/4ur3l6yr-avatar.png" alt="profile" />
               <div class="player">4ur3l6yr</div>
-              <div class="skills">pwn | web</div>
+              <div class="skills">crypto | forensics</div>
               <div class="bio">bio</div>
               <div class="buttons">
                 <a href="https://twitter.com/" ><img src="/assets/img/twitter.svg" alt="Twitter"></a>
